--- a/Pages/Products/Create.cshtml
+++ b/Pages/Products/Create.cshtml
@@ -16,7 +16,7 @@
                     <input asp-for="Product.Name" class="form-control" />
                     <span asp-validation-for="Product.Name" class="text-danger"></span>
                 </div>
-                <div cite="form-grup">
+                <div class="form-grup">
                     <label asp-for="Product.Price" class="control-label"></label>
                     <input asp-for="Product.Price" class="form-control" />
 
