--- a/Pages/Products/Index.cshtml
+++ b/Pages/Products/Index.cshtml
@@ -53,4 +53,8 @@
             }
         </tbody>
     </table>
-
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
