--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -40,4 +40,8 @@
         }
     </tbody>
     </table>
-
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
