--- a/Pages/Providers/Create.cshtml
+++ b/Pages/Providers/Create.cshtml
@@ -1,4 +1,36 @@
 ﻿@page
 @model SupermarketWEB.Pages.Providers.CreateModel
 @{
+    ViewData["Title"] = "Create";
 }
+    <h1>Create</h1>
+
+    <h4>Category</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <div class="form-grup">
+                    <label asp-for="Provider.Name" class="control-label"></label>
+                    <input asp-for="Provider.Name" class="form-control" />
+
+                    <label asp-for="Provider.Email" class="control-label"></label>
+                    <input asp-for="Provider.Email" class="form-control" />
+
+                    <span asp-validation-for="Provider.Name" class="text-danger"></span>
+                    <span asp-validation-for="Provider.Email" class="text-danger"></span>
+                </div>
+                <div class="form-grup mt-3 ">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <a asp-page="./Index" class="btn btn-primary">Back to List </a>
+                </div>
+            </form>
+        </div>
+    </div>
+    @section Scripts{
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
+    }
